# ODLabTracker

./: .gitignore  FastTrack.ipynb  FastTrack.py  Pipfile  README.md  draw_bounding_boxes.py  draw_bounding_boxes_with_labels.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: FastTrack-checkpoint.ipynb  FastTrack-checkpoint.py
configs/: IR_medium.yaml
data/10fps_1Kframes_RGB_results/: tracks.csv
data/10fps_1Kframes_results/: tracks.csv
src/ODLabTracker/: tracking.py
src/ODLabTracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ODLabTracker/.ipynb_checkpoints/: tracking-checkpoint.py
